k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: secure-messenger
    component: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3001
    targetPort: http
    protocol: TCP
  selector:
    app: secure-messenger
    component: web
